# nonebot-plugin-ehentai

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_ehentai/: __init__.py  ehapi.py  utils.py
tests/: plugin_test.py
